OSK does not come up on on Wayland after first zwp_text_input_v3.enable
Affected version
OS: Ubuntu 20.04
GNOME Shell: 3.36.4
Wayland
Bug summary
On Wayland, the zwp_text_input_v3
must be enabled and committed twice before the On-screen keyboard is shown. From my reading of the protocol it's unclear why enabling twice would be required, so I'm assuming it's a shell bug.
Steps to reproduce
Compile my hello-wayland project and run ./build/text-input
. It will show a gray window that changes color when clicked. In state 1 (orange), it sends one enable+commit and no OSK is shown. In state 3 (green) it sends two and the OSK is shown as expected. The code implementing these two states is here. You can also see the messages being sent by running with WAYLAND_DEBUG=1
or using wayland-debug.
Edited by Sophie Winter